// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfferContent shop in market 1`] = `
<div
  className="offerContent"
>
  <div
    className="priceInfo"
  >
    <div
      className="price"
    >
      <div
        className="price"
      >
        <div
          className="priceWrapper"
        >
          <div
            className="current"
          >
            53 990 руб.
          </div>
        </div>
      </div>
    </div>
    <div
      className="discount"
    />
  </div>
  <div
    className="deliveryInfo"
  >
    <div
      className="delivery"
    >
      <div
        className="icon deliveryIcon deliveryManIcon"
      />
      <span
        className="info"
      >
        Бесплатно
      </span>
    </div>
    <div
      className="shop"
    >
      <div
        className="icon"
      />
      <div>
        Магазин, который продает
         
        4
      </div>
    </div>
  </div>
</div>
`;

exports[`OfferContent with age disclaimer 1`] = `
<div
  className="offerContent"
>
  <div
    className="priceInfo"
  >
    <div
      className="price"
    >
      <div
        className="price"
      >
        <div
          className="priceWrapper"
        >
          <div
            className="current"
          >
            76 990 руб.
          </div>
        </div>
      </div>
    </div>
    <div
      className="discount"
    />
  </div>
  <div
    className="deliveryInfo"
  >
    <div
      className="delivery"
    >
      <div
        className="icon deliveryIcon deliveryManIcon"
      />
      <span
        className="info"
      >
        Бесплатно, завтра
      </span>
    </div>
    <div
      className="shop"
    >
      <div>
        Яндекс.Маркет
         
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`OfferContent with base price, discount 1`] = `
<div
  className="offerContent"
>
  <div
    className="priceInfo"
  >
    <div
      className="price"
    >
      <div
        className="price"
      >
        <div
          className="priceWrapper"
        >
          <div
            className="current newCurrentPrice"
          >
            53 990 руб.
          </div>
          <div
            className="old"
          >
            107 980 руб.
          </div>
        </div>
      </div>
    </div>
    <div
      className="discount"
    >
      <div
        className="discount"
      >
        – 
        50
        %
      </div>
    </div>
  </div>
  <div
    className="deliveryInfo"
  >
    <div
      className="delivery"
    >
      <div
        className="icon deliveryIcon deliveryManIcon"
      />
      <span
        className="info"
      >
        Бесплатно
      </span>
    </div>
    <div
      className="shop"
    >
      <div>
        OZON.ru
         
        4
      </div>
    </div>
  </div>
</div>
`;

exports[`OfferContent without discount and discllaimer 1`] = `
<div
  className="offerContent"
>
  <div
    className="priceInfo"
  >
    <div
      className="price"
    >
      <div
        className="price"
      >
        <div
          className="priceWrapper"
        >
          <div
            className="current"
          >
            53 990 руб.
          </div>
        </div>
      </div>
    </div>
    <div
      className="discount"
    />
  </div>
  <div
    className="deliveryInfo"
  >
    <div
      className="delivery"
    >
      <div
        className="icon deliveryIcon deliveryManIcon"
      />
      <span
        className="info"
      >
        Бесплатно
      </span>
    </div>
    <div
      className="shop"
    >
      <div>
        OZON.ru
         
        4
      </div>
    </div>
  </div>
</div>
`;
